@@ -1233,16 +1233,38 @@ void define_basic_species_data()
 
   // hitran cross section species
   for (const auto& s : {
+      "C2F6",
+      "C3F8",
+      "C4F10",
+      "C5F12",
+      "C6F14",
+      "C8F18",
+      "cC4F8",
       "CCl4",
       "CFC11",
+      "CFC113",
+      "CFC114",
+      "CFC115",
       "CFC12",
-      "C2F6",
+      "CH2Cl2",
+      "CH3CCl3",
+      "CHCl3",
+      "Halon1211",
+      "Halon1301",
+      "Halon2402",
+      "HCFC141b",
+      "HCFC142b",
       "HCFC22",
+      "HFC125",
       "HFC134a",
       "HFC143a",
-      "CHF3",
+      "HFC152a",
+      "HFC227ea",
+      "HFC23",
+      "HFC245fa",
       "HFC32",
-      "CFC113",
+      "NF3",
+      "SO2F2",
   })
   {
       species_data.push_back
