@@ -1,3 +1,12 @@
+2019-02-21  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-1226
+
+	* src/partition_function_data.cc, src/species_data.cc:
+
+	Add remaining cross sections species (if data is available) for
+	RFMIP calculations.
+
 2019-02-21  Richard Larsson <larsson@mps.mpg.de>
 
 	* arts-2-3-1225
